Something new is coming

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VITE_APPWRITE_COLLECTION_ID = "68a5524a002cbf094321"
 VITE_APPWRITE_BUCKET_ID = "68a71bfe001d64b3f2a5"
 VITE_APPWRITE_LIKE_COLLECTION_ID = "68adaefe0039ac03347f"
 VITE_APPWRITE_COMMENT_COLLECTION_ID = "68b1a585003ce8342200"
+VITE_APPWRITE_USER_COLLECTION_ID = "users"
