--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ VITE_APPWRITE_BUCKET_ID = "68a71bfe001d64b3f2a5"
 VITE_APPWRITE_LIKE_COLLECTION_ID = "68adaefe0039ac03347f"
 VITE_APPWRITE_COMMENT_COLLECTION_ID = "68b1a585003ce8342200"
 VITE_APPWRITE_USER_COLLECTION_ID = "users"
+VITE_APPWRITE_SUBSCRIPTION_COLLECTION_ID = "68c6742c003d2ec34b23"
